Fix profile icon being off center

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -985,7 +985,6 @@ html {
 }
 
 .avatar-3QF_VA {
-  border: 8px solid transparent;
   background-color: transparent;
 }
 
